--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Selamat Ulang Tahun!</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Selamat Ulang Tahun!</title>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>🎉 Selamat Ulang Tahun! 🎂</h1>
-    <p>Semoga di hari istimewa ini, kamu diberikan kebahagiaan, kesehatan, dan kesuksesan yang berlimpah. 🎁</p>
-    <p class="name">Dari: Riza Rizky</p>
-  </div>
+    <div class="container">
+        <h1>🎉 Selamat Ulang Tahun 🎂</h1>
+        <p>"Selamat ulang tahun, cintaku…
+Di hari istimewamu ini, aku ingin kau tahu betapa bersyukurnya aku karena dipertemukan denganmu.
+Kamu bukan hanya kekasih, tapi juga sahabat, rumah, dan pelengkap bahagiaku.
+Semoga semua doa yang kau panjatkan hari ini dikabulkan Tuhan satu per satu.
+Tetap jadi kamu yang penuh cinta, hangat, dan mengerti.
+Aku akan terus ada, mendampingimu… dalam tawa, dalam tangis, dan dalam setiap langkah hidupmu.
+I love you more than words can ever say. 💖"</p>
+        <p class="signature">- Dari todlermu tercinta 💖</p>
+    </div>
 </body>
 </html>
